# sandpit

./: .gitignore  AGENTS5.md  README.md  pyproject.toml
.github/workflows/: tests.yml
policies/: default.toml  no-network.toml  read-only.toml
sandpit/: __init__.py  api.py  cli.py  policy.py  sandbox.py  trace.py  tracer.py
tests/: test_api.py  test_policy.py  test_tracer.py
tests/fixtures/: helper_module.py  open_and_import.py
