[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "sandpit"
version = "0.2.0"
description = "A deterministic Python sandbox with execution traces."
requires-python = ">=3.9"

[project.scripts]
sandpit = "sandpit.cli:main"

[tool.setuptools.packages.find]
include = ["sandpit*"]

[tool.setuptools.data-files]
"policies" = [
  "policies/default.toml",
  "policies/no-network.toml",
  "policies/read-only.toml",
]

[tool.pytest.ini_options]
pythonpath = ["."]
